# bdh-fastapi-new

./: QUALITY_CHECKLIST.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
fastapi_new/: cli.py
tests/: test_cli.py  test_runtime_scaffold.py
